--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@
 }
 
 .container-item{
-    color: white;
+    color: rosybrown;
     border: 1px solid rgba(0, 0, 0, 0.8);
     text-align: center;
+    font-size: 40px;
 }
