--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 }
 
 .container-item{
+    display: inline-block;
     color: rosybrown;
     border: 1px solid rgba(0, 0, 0, 0.8);
     text-align: center;
