--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     width: 350px;
     height: 350px;
     margin: auto;
-    margin-top: 100px;
+    margin-top: 10px;
 }
 
 .container-item{
@@ -22,11 +22,56 @@
 .display-message{
     position: relative;
     width: 350px;
-    height: 100%;
-    padding-top: 50px;
-    margin-top: 500px;
+    height: 40px;
+    padding-top: 10px;
     background-color: rgb(73, 51, 51);
     color: rgba(243, 187, 2, 0.8);
     margin: auto;
+    padding: auto;
     text-align: center;
+}
+
+.buttons{
+    width: 350px;
+    height: 50px;
+    margin: auto;
+    padding: auto;
+    display: block;
+}
+
+button {
+    justify-content: center;
+    background-color: rgb(73, 51, 51);
+    border-radius: 20%;
+    border-width: 5px;
+    border-color: rgba(243, 187, 2, 0.8);
+    color: rgba(243, 187, 2, 0.8);
+    padding: 15px 32px;
+    text-align: center;
+    width: 160px;
+    font-size: 13px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+.score-board {
+    position: relative;
+    border-color: rgba(243, 187, 2, 0.8);
+    border-width: 4px;
+    border-style: solid;
+    width: 300px;
+    height: 40px;
+    background-color: rgb(73, 51, 51);
+    color: rgba(243, 187, 2, 0.8);
+    margin: auto;
+    padding: auto;
+    text-align: center;
+}
+.players {
+    display: inline-block;
+}
+
+h2 {
+    text-align: center;
+    color: rgba(243, 187, 2, 0.8);
 }
